<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TV_Bahasa_IDXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_Bahasa_IDXML"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/S_Bahasa_IDXML"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/TV_JudulUtama_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/TV_JudulUtama_IDXML"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/B_Notification_Simple_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/B_Notification_Simple_IDXML"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/B_Notification_BigTextStyle_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/B_Notification_BigTextStyle_IDXML"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/B_Notification_BigPictureStyle_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/B_Notification_BigPictureStyle_IDXML"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/B_Notification_InboxStyle_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="12dp"
        android:text="@string/B_Notification_InboxStyle_IDXML"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/B_Keluar_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Keluar"
        android:textColor="@color/colorAccent" />

</LinearLayout>